build: Makefile, ElasticSearch

--- a/.env.example
+++ b/.env.example
@@ -8,9 +8,12 @@ POSTGRES_USER=root
 POSTGRES_PASSWORD=password
 
 # App
-APP_HOST_PORT=9000:9000
+APP_HOST_PORT=9000:9011
 
 # pgAdmin
 PGADMIN_HOST_PORT=5050:80
 PGADMIN_DEFAULT_EMAIL=admin.a@gmail.com
 PGADMIN_DEFAULT_PASSWORD=password
+
+# ElasticSearch
+ELASTICSEARCH_HOST_PORT=9200:9200
