--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,3 +64,29 @@ services:
             - ./elasticsearch/data:/usr/share/elasticsearch/data
         ports:
             - "${ELASTICSEARCH_HOST_PORT}"
+
+    redis:
+        image: redis:7.2.4-bookworm
+        container_name: redis-pokemons
+        restart: always
+        ports:
+            - "6379:6379"
+        volumes:
+            - ./redis/dаta:/root/redis
+            - ./redis/redis.conf:/usr/local/etc/redis/redis.conf
+        environment:
+            - REDIS_PASSWORD="${REDIS_PASSWORD}"
+            - REDIS_PORT=6379
+            - REDIS_DATABASES=16
+
+    redis-insight:
+        image: redis/redisinsight:latest
+        container_name: redis-insight-pokemons
+        restart: always
+        ports:
+            - "5540:5540"
+        volumes:
+            - redis-insight:/data
+
+volumes:
+    redis-insight:
