--- a/src/composer.json
+++ b/src/composer.json
@@ -8,12 +8,13 @@
         "php": "^8.1",
         "darkaonline/l5-swagger": "^8.5",
         "doctrine/annotations": "^2.0",
-        "guzzlehttp/guzzle": "^7.2",
+        "guzzlehttp/guzzle": "^7.8",
         "laravel/framework": "^10.10",
         "laravel/passport": "^11.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
-        "zircote/swagger-php": "^4.8"
+        "zircote/swagger-php": "^4.8",
+      "ext-simplexml": "*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
