feat: db for tests, update Makefile, .env

--- a/src/.env.testing.example
+++ b/src/.env.testing.example
@@ -9,9 +9,9 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=pgsql
-DB_HOST=db
+DB_HOST=db-test
 DB_PORT=5433
-DB_DATABASE=postgres-pokemons
+DB_DATABASE=postgres-pokemons-test
 DB_USERNAME=root
 DB_PASSWORD=password
 
