--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,11 @@ POSTGRES_DB=pokemons
 POSTGRES_USER=root
 POSTGRES_PASSWORD=password
 
+POSTGRES_TEST_HOST_PORT=5433:5433
+POSTGRES_TEST_DB=postgres-pokemons-test
+POSTGRES_TEST_USER=root
+POSTGRES_TEST_PASSWORD=password
+
 # App
 APP_HOST_PORT=9000:9011
 
