--- a/src/.env.example
+++ b/src/.env.example
@@ -10,8 +10,8 @@ LOG_LEVEL=debug
 
 DB_CONNECTION=pgsql
 DB_HOST=db
-DB_PORT=5433
-DB_DATABASE=postgres-pokemons
+DB_PORT=5432
+DB_DATABASE=pokemons
 DB_USERNAME=root
 DB_PASSWORD=password
 
