--- a/src/composer.json
+++ b/src/composer.json
@@ -16,6 +16,7 @@
         "laravel/passport": "^11.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
+        "spatie/data-transfer-object": "^3.9",
         "zircote/swagger-php": "^4.8"
     },
     "require-dev": {
