feat: implement telescope

--- a/src/composer.json
+++ b/src/composer.json
@@ -15,6 +15,7 @@
         "laravel/framework": "^10.10",
         "laravel/passport": "^11.10",
         "laravel/sanctum": "^3.3",
+        "laravel/telescope": "^5.0",
         "laravel/tinker": "^2.8",
         "spatie/data-transfer-object": "^3.9",
         "zircote/swagger-php": "^4.8"
@@ -57,7 +58,9 @@
     },
     "extra": {
         "laravel": {
-            "dont-discover": []
+            "dont-discover": [
+                "laravel/telescope"
+            ]
         }
     },
     "config": {
