--- a/src/.env.example
+++ b/src/.env.example
@@ -30,12 +30,11 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=скрыто
-MAIL_PORT=скрыто
-MAIL_USERNAME=скрыто
-MAIL_PASSWORD=скрыто
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="pokemonslanguage@gmail.com"
+MAIL_HOST=smtp.yandex.ru
+MAIL_PORT=465
+MAIL_USERNAME=ya.oxota2015@yandex.ru
+MAIL_PASSWORD=СКРЫТО
+MAIL_FROM_ADDRESS=ya.oxota2015@yandex.ru
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
