--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "devDependencies": {
         "@prettier/plugin-php": "^0.22.2",
-        "prettier": "^3.2.5"
+        "prettier": "^3.2.5",
+        "swagger-typescript-api": "^13.0.3"
     }
 }
