refactor: Dockerfile, php.sh, delete pgadmin

--- a/containers/php/Dockerfile
+++ b/containers/php/Dockerfile
@@ -1,14 +1,26 @@
 FROM php:8.2.11-fpm
 
-COPY ./custom-php.ini /usr/local/etc/php/conf.d/custom-php.ini
+USER root
+
+COPY src /var/www
+COPY containers/php/php.sh /etc/php.sh
+RUN chmod +x /etc/php.sh &&  \
+    chmod 777 -R /var/www/storage
+CMD ["/etc/php.sh"]
+
+
+COPY containers/php/custom-php.ini /usr/local/etc/php/conf.d/custom-php.ini
 
 RUN set -eux; \
     echo "\e[1;33mInstall COMPOSER\e[0m"; \
     cd /tmp \
-    && curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer; \
-    \
-    apt-get update && apt-get install -y --no-install-recommends --fix-missing \
+    && curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer;
+
+RUN apt-get update && apt-get install -y --no-install-recommends --fix-missing \
         curl \
+        zip \
+        unzip \
+        git \
         libmemcached-dev \
         libz-dev \
         libpq-dev \
